syntax = "proto3";

package host;
option java_package = "bot.cline.host.proto";
option java_multiple_files = true;

import "common.proto";

// Provides methods for working with IDE windows and editors.
service WindowService {
  // Opens a text document in the editor and returns editor information.
  rpc showTextDocument(ShowTextDocumentRequest) returns (TextEditorInfo);
  rpc showOpenDialogue(ShowOpenDialogueRequest) returns (SelectedResources);
  rpc showMessage(ShowMessageRequest) returns (SelectedResponse);
  // Shows a save dialog for file selection.
  rpc showSaveDialog(ShowSaveDialogRequest) returns (ShowSaveDialogResponse);
}

message ShowTextDocumentRequest {
  cline.Metadata metadata = 1;
  string path = 2;
  optional ShowTextDocumentOptions options = 3;
}

// See https://code.visualstudio.com/api/references/vscode-api#TextDocumentShowOptions
message ShowTextDocumentOptions {
  optional bool preview = 1;
  optional bool preserve_focus = 2;
  optional int32 view_column = 3;
}

message TextEditorInfo {
  string document_path = 1;
  optional int32 view_column = 2;
  bool is_active = 3;
}

message ShowOpenDialogueRequest {
  cline.Metadata metadata = 1;
  optional bool can_select_many = 2;
  optional string open_label = 3;
  optional ShowOpenDialogueFilterOption filters = 4;
}

message ShowOpenDialogueFilterOption {
  repeated string files = 1;
}

message SelectedResources {
  repeated string paths = 1;
}

enum ShowMessageType {
  ERROR = 0;
  INFORMATION = 1;
  WARNING = 2;
}

message ShowMessageRequest {
  cline.Metadata metadata = 1;
  ShowMessageType type = 2;
  string message = 3;
  optional ShowMessageRequestOptions options = 4;
}

message ShowMessageRequestOptions {
  repeated string items = 1;
  optional bool modal = 2;
  optional string detail = 3;

}

message SelectedResponse {
  optional string selected_option = 1;
}

message ShowSaveDialogRequest {
  cline.Metadata metadata = 1;
  optional ShowSaveDialogFilterOption filters = 2;
  optional string default_uri = 3;
  optional string save_label = 4;
}

message ShowSaveDialogFilterOption {
  // A set of file filters used by the dialog. Each entry is a human-readable
  // label (the key) and a list of file extensions (the value).
  // For example, in JavaScript, this would be represented as:
  // { 'Images': ['png', 'jpg'], 'TypeScript': ['ts', 'tsx'] }
  map<string, FileExtensionList> filter_map = 1;
}

message FileExtensionList {
  repeated string extensions = 1;
}

message ShowSaveDialogResponse {
  optional string path = 1;
}
